--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
   </head>
   <body>
-    <div id="errors"></div>
-
-    <div id="container"></div>
+    <div class="container">
+      <div id="errors"></div>
+      <div id="container"></div>
+    </div>
 
     <script>
       window.addEventListener('mousedown', function(e) {
